--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<div class="container">
+  <h1>Book catalogue</h1>
+  <ol>
+    <% @books.each do |book| %>
+      <li>
+        <strong><%= book.title %></strong>
+      </li>
+    <% end %>
+  </ol>
+</div>
