display also author and genre

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,7 +3,8 @@
   <ol>
     <% @books.each do |book| %>
       <li>
-        <strong><%= book.title %></strong>
+        <strong><%= book.title %></strong> by <%= book.author.name %>
+          <em><%= book.genre.name %></em>
       </li>
     <% end %>
   </ol>
